Replaces the deprecated use of the `new Long(long)` constructor and replaces it with a call to the static `Long.valueOf(long)` method.
HmpFile.java
PreferenceStore.java
HmvFile.java